# basic_study

./: .gitignore  README.md
01_data_structure/01_simple_stack/: CMakeLists.txt  simple_stack.c  simple_stack.h
01_data_structure/02_generic_stack/: generic_stack.h  main.c
01_data_structure/03_generic_stack_plus/: generic_stack_plus.hpp  main.cpp
01_data_structure/04_memory_pool/: CMakeLists.txt  main.c
01_data_structure/05_generic_stack_pool/: CMakeLists.txt  generic_stack.c  main.c  memory_pool.c  memory_pool.h
01_data_structure/06_simple_queue/: CMakeLists.txt
01_data_structure/07_generic_queue/: generic_queue.c  generic_queue.h  main.c
01_data_structure/08_generic_queue_plus/: CMakeLists.txt  generic_queue.hpp  main.cpp
01_data_structure/09_generic_queue_pool/: generic_queue.c  generic_queue.h  main.c  memory_pool.c
01_data_structure/10_generic_ring_queue/: CMakeLists.txt  generic_queue.c  generic_queue.h  main.c  memory_pool.h
01_data_structure/11_linked_list/: CMakeLists.txt  linked_list.c  linked_list.h  main.c
01_data_structure/12_doubly_linked_list/: CMakeLists.txt  doubly_linked_list.c  doubly_linked_list.h  main.c
01_data_structure/13_circular_linked_list/: CMakeLists.txt  circular_linked_list.c  circular_linked_list.h  main.c
01_data_structure/14_dcircular_list/: CMakeLists.txt  dcircular_list.c  dcircular_list.h  main.c
01_data_structure/15_binary_tree/: CMakeLists.txt  binary_tree.h  binaty_tree.c  main.c
01_data_structure/16_thread_tree/: CMakeLists.txt  main.c  thread_tree.c  (+1 more)
05_protocol/: ONVIF_TODO_ROADMAP.md  docker-compose.yml
06_gstreamer/: README.md  docker-compose.yml
06_gstreamer/000_test-launch/: CMakeLists.txt  test-launch.cpp
06_gstreamer/010_tee_queue/: CMakeLists.txt  main.cpp
06_gstreamer/012_camera_pipeline_class/: CMakeLists.txt  CameraPipeline.cpp  CameraPipeline.h  main.cpp
(+503 files in other folders)
